# physics-of-diffusion-models

./: .gitignore  README.md  analyze_fids.ipynb  analyze_stats.ipynb  analyze_synthetic_stats.ipynb  check_mode_collapse.ipynb  check_pz_computation.ipynb  compare_datasets.ipynb  compare_schedules.ipynb  derivation.tex  formulas.md  gan.ipynb  hypersphere.ipynb  metrics.ipynb  mnist_true_diffusion_samples.ipynb  pyproject.toml  regular_synthetic_data.ipynb  run_scripts.sh  show_samples.ipynb  test.ipynb  test_ll_for_true_score_sampling.ipynb
base_config/: __init__.py  config.py
config/: __init__.py  config.py  config.yaml  config_utils.py  dataset_configs.py  high_dim_exp.yaml
diffusion/: __init__.py  ddpm.py  ddpm_dynamic.py  ddpm_sampling.py  ddpm_trainer.py  diffusion_dynamic.py  diffusion_utils.py
dual_score_matching/: __init__.py  data.py  grad.py  hf_to_cifar_like.py  main.py  memoize.py  noise.py  plotting.py  printing.py  run_exps.py  tensor_ops.py  trackers.py  utils.py
free_energy/: __init__.py  direct_computation.py  free_energy_analysis.py  free_energy_from_p.py
gan/: __init__.py  discriminator.py  gan_trainer.py  generator.py  helper_functions.py
pytorch_diffusion/: setup.py
scripts/: __init__.py  analyze_cifar_nn.py  analyze_low_temp_metric.py  check_config.py  check_distance.py  cifar10_metric_exp.py  compare_metric_regularization.py  compute_cifar10_metric.py  compute_fid.py  compute_fid_.py  compute_mnist_pw_dist.py  compute_model_metric_schedule.py  compute_pw_dist.py  compute_stats_backward.py  compute_stats_different_train_sizes.py  compute_stats_empirical.py  compute_stats_forward.py  compute_stats_forward_all.py  compute_stats_forward_unbiased.py  (+13 more)
(+68 files in other folders)
