[tool.poetry]
name = "pdm"
version = "1.0"
description = ""
authors = ["None, 0"]
readme = "README.md"
packages = [
    { include = "utils" },
    { include = "diffusion" },
    { include = "config" },
]


[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
torchvision = "^0.20.1"
mypy = "^1.13.0"
tqdm = "^4.67.1"
torch-ema = "^0.3"
denoising-diffusion-pytorch = "^2.1.1"
matplotlib = "^3.9.3"
jupyter = "^1.1.1"
types-pywin32 = "^308.0.0.20241128"
wandb = "^0.19.1"
pydantic = "^2.10.4"
pytorch-fid = "^0.3.0"
lpips = "^0.1.4"
ninja = "^1.11.1.3"
pytorch-diffusion = {git = "https://github.com/pesser/pytorch_diffusion.git"}
torchmetrics = {extras = ["image"], version = "^1.6.1"}
diffusers = "^0.32.2"
datasets = "^3.5.0"


[tool.mypy]
exclude = "venv|.*/venv/.*"
strict = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
